--- a/app/src/main/res/layout/poll_questions.xml
+++ b/app/src/main/res/layout/poll_questions.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,7 +7,9 @@
     tools:context="shd.pollingapp.EmployeePoll">
 
 
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+
+    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="368dp"
         android:layout_height="495dp"
@@ -22,5 +24,14 @@
             android:layout_height="wrap_content" >
         </ListView>
 
-    </LinearLayout>
-</android.support.constraint.ConstraintLayout>
+        <Button
+            android:id="@+id/button2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Button"
+            android:layout_below="@id/mobile_list"
+            android:background="@color/colorPrimary"/>
+
+    </RelativeLayout>
+</LinearLayout>
