--- a/app/src/main/res/layout/employee_poll.xml
+++ b/app/src/main/res/layout/employee_poll.xml
@@ -19,7 +19,9 @@
         <ListView
             android:id="@+id/mobile_list"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" >
+            android:layout_height="wrap_content"
+            android:divider="@null"
+            android:dividerHeight="0dp">
         </ListView>
 
     </LinearLayout>
