--- a/app/src/main/res/layout/list_item_question.xml
+++ b/app/src/main/res/layout/list_item_question.xml
@@ -1,11 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/tv_li_question"
-        />
+    android:layout_height="70dp"
+    android:padding="10dp"
+    android:layout_gravity="center">
+
+    <android.support.v7.widget.CardView
+        xmlns:card_view="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/card_view"
+        android:layout_gravity="center"
+        android:layout_width="300dp"
+        android:layout_height="50dp"
+        card_view:cardCornerRadius="10dp"
+        android:background="@drawable/card_edge"
+        android:elevation="@dimen/cardview_default_elevation">
+
+        <TextView
+            android:id="@+id/tv_li_question"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:fontFamily="casual"
+            android:textSize="20dp"/>
+    </android.support.v7.widget.CardView>
 
 </LinearLayout>
