--- a/app/src/main/res/layout/hr_add_poll.xml
+++ b/app/src/main/res/layout/hr_add_poll.xml
@@ -1,13 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="shd.pollingapp.EmployeePoll">
+    android:orientation="vertical"
+    tools:context="shd.pollingapp.EmployeePoll"
+    android:background="#8f0617">
+
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/my_toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:background="?attr/colorPrimary"
+        android:elevation="4dp"
+        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
+        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
 
 
+    <TextView
+        android:id="@+id/title_action"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="left"
+        android:text="QuickPoll"
+        android:textSize="30dp"/>
 
+        <ImageButton
+            android:id="@+id/add_poll_action"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_action_name"
+            android:layout_marginLeft="180dp"/>
+
+    </android.support.v7.widget.Toolbar>
 
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
@@ -21,18 +48,12 @@
         <ListView
             android:id="@+id/mobile_list"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" >
+            android:layout_height="match_parent" >
         </ListView>
 
-        <Button
-            android:id="@+id/btn_create_poll"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="Create New Poll"
-            android:textColor="#ffffff"
-            android:layout_below="@id/mobile_list"
-            android:background="@color/colorPrimary"/>
 
     </RelativeLayout>
+
 </LinearLayout>
+
+
