--- a/app/src/main/res/layout/add_questions.xml
+++ b/app/src/main/res/layout/add_questions.xml
@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="shd.pollingapp.AddQuestions">
+    android:orientation="vertical"
+    tools:context="shd.pollingapp.EmployeePoll"
+    android:background="#ac0743">
 
-
-
+    <include layout="@layout/action_bar"/>
 
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
@@ -21,17 +23,12 @@
         <ListView
             android:id="@+id/mobile_list"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" >
+            android:layout_height="match_parent" >
         </ListView>
 
-        <Button
-            android:id="@+id/btn_add_question"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="Add Question"
-            android:layout_below="@id/mobile_list"
-            android:background="@color/colorPrimary"/>
 
     </RelativeLayout>
+
 </LinearLayout>
+
+
