--- a/app/src/main/res/layout/list_item_question.xml
+++ b/app/src/main/res/layout/list_item_question.xml
@@ -9,18 +9,19 @@
         xmlns:card_view="http://schemas.android.com/apk/res-auto"
         android:id="@+id/card_view"
         android:layout_gravity="center"
-        android:layout_width="300dp"
-        android:layout_height="50dp"
+        android:layout_width="320dp"
+        android:layout_height="90dp"
         card_view:cardCornerRadius="10dp"
-        android:background="@drawable/card_edge"
-        android:elevation="@dimen/cardview_default_elevation">
+        android:elevation="8dp"
+        android:background="@drawable/rounded_corner_background">
 
         <TextView
             android:id="@+id/tv_li_question"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:fontFamily="casual"
-            android:textSize="20dp"/>
+            android:padding="20dp"
+            android:textSize="20dp" />
+
     </android.support.v7.widget.CardView>
 
 </LinearLayout>
