--- a/app/src/main/res/layout/poll_questions.xml
+++ b/app/src/main/res/layout/poll_questions.xml
@@ -4,9 +4,35 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="shd.pollingapp.EmployeePoll">
+    android:orientation="vertical"
+    tools:context="shd.pollingapp.EmployeePoll"
+    android:background="#04436e">
 
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/my_toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:background="?attr/colorPrimary"
+        android:elevation="4dp"
+        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
+        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
 
+        <TextView
+            android:id="@+id/title_action"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="left"
+            android:text="QuickPoll"
+            android:textSize="30dp"/>
+
+        <ImageButton
+            android:id="@+id/button2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_action_done"
+            android:layout_marginLeft="190dp" />
+
+    </android.support.v7.widget.Toolbar>
 
 
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
@@ -21,17 +47,12 @@
         <ListView
             android:id="@+id/mobile_list"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" >
+            android:layout_height="match_parent"
+            android:divider="@null"
+            >
         </ListView>
 
-        <Button
-            android:id="@+id/button2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="Button"
-            android:layout_below="@id/mobile_list"
-            android:background="@color/colorPrimary"/>
+
 
     </RelativeLayout>
 </LinearLayout>
